# robot_game_simulation

./: README.md
.gazebo_models/: README.md
.gazebo_models/Board/: model.config  model.sdf
.gazebo_models/acube/: model.sdf
.gazebo_models/babyblue/: model.config  model.sdf
.gazebo_models/brown/: model.config  model.sdf
.gazebo_models/green/: model.config  model.sdf
.gazebo_models/mustard/: model.config  model.sdf
.gazebo_models/orange/: model.config  model.sdf
.gazebo_models/pink/: model.config  model.sdf
.gazebo_models/purple/: model.config  model.sdf
fetch_game_ws/devel/: .catkin  setup.sh
fetch_game_ws/src/my_game/: CMakeLists.txt  package.xml
fetch_game_ws/src/my_game/config/: fetch_control.yaml
fetch_game_ws/src/my_game/launch/: launch.launch  my_game.launch
fetch_game_ws/src/my_game/meshes/: cube.dae  cube1.dae
fetch_game_ws/src/my_game/scripts/: Nouveau document  detect_red_cube.py  go_to_cube.py  grab_red_cube_arm.py  grid_coords.yaml  move_arm_simple.py  move_forward.py  pick_cube.py  spawm_jetons.py  test_cv2_window.py  test_image.py
fetch_game_ws/src/my_game/scripts1/: arm.py  arm_init.py  capture_image.py  click_coordinates.py  close_gripper.py  color_cube_detector.py  cube_seen.py  detect_cube.py  detect_grid_colors.py  game_ai.py  get_gap_pose.py  grasp_color_cube.py  grid_coords.yaml  hito_pose.py  lower_head.py  pose.py  save_pose.py  spawn.py  test.py  torso.py
fetch_game_ws/src/my_game/urdf/: bloc_cubes.urdf
fetch_game_ws/src/my_game/worlds/: borybory.world  full.world  newworld.world  puissance4.world
(+49 files in other folders)
