<?xml version="1.0"?>
<package format="2">
  <name>my_game</name>
  <version>0.0.1</version>
  <description>My Fetch Game Package</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- Dépendances build et run -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_ros</depend>

  <export>
  </export>
</package>
